--- a/WorBinCoder/WorBinCoder.vbproj
+++ b/WorBinCoder/WorBinCoder.vbproj
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2CD94155-B173-4AB2-8950-D0CA293B5020}</ProjectGuid>
+    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
+    <ProductVersion>
+    </ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{0990F6AA-C5FE-4D1A-A649-F921C9F9B1D3}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <StartupObject>Wor_Bin_Coder.My.MyApplication</StartupObject>
     <RootNamespace>Wor_Bin_Coder</RootNamespace>
@@ -12,10 +14,33 @@
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <PublishUrl>C:\Users\Criz\Desktop\Wor BinCoder\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <SupportUrl>https://mail.google.com/mail/%3fview=cm&amp;fs=1&amp;tf=1&amp;source=mailto&amp;to=koltyrstudios%40gmail.com</SupportUrl>
+    <ErrorReportUrl>https://mail.google.com/mail/%3fview=cm&amp;fs=1&amp;tf=1&amp;source=mailto&amp;to=koltyrstudios%40gmail.com</ErrorReportUrl>
+    <TargetCulture>es</TargetCulture>
+    <ProductName>Wor BinCoder</ProductName>
+    <PublisherName>Worcome Studios</PublisherName>
+    <SuiteName>Worcome Apps</SuiteName>
+    <ApplicationRevision>19</ApplicationRevision>
+    <ApplicationVersion>30.09.20.19</ApplicationVersion>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <CreateDesktopShortcut>true</CreateDesktopShortcut>
+    <PublishWizardCompleted>true</PublishWizardCompleted>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
@@ -24,8 +49,8 @@
     <DocumentationFile>WorBinCoder.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
+    <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
@@ -46,7 +71,38 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>BinCoder.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestCertificateThumbprint>0F6F1303237CF03A26C5AC03E84D84D333DD2E1E</ManifestCertificateThumbprint>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestKeyFile>WorBinCoder_TemporaryKey.pfx</ManifestKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>false</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FastColoredTextBox">
+      <HintPath>..\..\..\..\Hecho En PC\Z-DLLs\FastColoredTextBox.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -70,6 +126,43 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="About.Designer.vb">
+      <DependentUpon>About.vb</DependentUpon>
+    </Compile>
+    <Compile Include="About.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AppHelper.designer.vb">
+      <DependentUpon>AppHelper.vb</DependentUpon>
+    </Compile>
+    <Compile Include="AppHelper.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AppService.vb" />
+    <Compile Include="AppSupport.designer.vb">
+      <DependentUpon>AppSupport.vb</DependentUpon>
+    </Compile>
+    <Compile Include="AppSupport.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AppUpdate.designer.vb">
+      <DependentUpon>AppUpdate.vb</DependentUpon>
+    </Compile>
+    <Compile Include="AppUpdate.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CryptoActions.Designer.vb">
+      <DependentUpon>CryptoActions.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CryptoActions.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Hightlight.Designer.vb">
+      <DependentUpon>Hightlight.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Hightlight.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -85,16 +178,63 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Sender.Designer.vb">
+      <DependentUpon>Sender.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Sender.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TextEditor.Designer.vb">
+      <DependentUpon>TextEditor.vb</DependentUpon>
+    </Compile>
+    <Compile Include="TextEditor.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TextEditorDEV.Designer.vb">
+      <DependentUpon>TextEditorDEV.vb</DependentUpon>
+    </Compile>
+    <Compile Include="TextEditorDEV.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="About.resx">
+      <DependentUpon>About.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AppHelper.resx">
+      <DependentUpon>AppHelper.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AppSupport.resx">
+      <DependentUpon>AppSupport.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AppUpdate.resx">
+      <DependentUpon>AppUpdate.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CryptoActions.resx">
+      <DependentUpon>CryptoActions.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Hightlight.resx">
+      <DependentUpon>Hightlight.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Sender.resx">
+      <DependentUpon>Sender.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TextEditor.resx">
+      <DependentUpon>TextEditor.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TextEditorDEV.resx">
+      <DependentUpon>TextEditorDEV.vb</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
+    <None Include="My Project\app.manifest" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -105,5 +245,123 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\41214.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Actions-find-and-replace-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\android-developer.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\apply-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\audio-volume-medium-panel.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ball-info-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Button-Close-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\codigo-binario_318-46836.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\color.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\csharp3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\event-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Files-Edit-file-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Flecha Der.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Flecha Izq.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Folder-48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Font-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Gmail-Logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\HTML5_logo_and_wordmark.svg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo_javascript.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\New-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Paste-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\php.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Save-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sql-file-icon-0.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\visualbasic.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Worcome Corp PLN.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\images.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4 Client Profile %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Windows.Installer.3.1">
+      <Visible>False</Visible>
+      <ProductName>Windows Installer 3.1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Panel Transparente Verde.png" />
+    <None Include="Resources\Crypto_key.svg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="BinCoder.ico" />
+    <None Include="Resources\SistemTrail.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+       Other similar extension points exist, see Microsoft.Common.targets.
+  <Target Name="BeforeBuild">
+  </Target>
+  <Target Name="AfterBuild">
+  </Target>
+  -->
 </Project>
